Update schedule. Update part-of-speech-tags

--- a/doc/part_of_speech_tags.ipynb
+++ b/doc/part_of_speech_tags.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -456,6 +456,23 @@
       "was            VBD     1.00\n",
       "blue           JJ      0.86\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('PRP', 0.9915824915824916),\n",
+       " ('VBD', 0.6474820143884892),\n",
+       " ('DT', 0.9987005955603682),\n",
+       " ('NN', 1.0),\n",
+       " ('NN', 0.9813432835820896),\n",
+       " ('IN', 0.6039103975139195),\n",
+       " ('VBD', 1.0),\n",
+       " ('JJ', 0.8571428571428571)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -465,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -482,6 +499,24 @@
       "from           IN      1.00\n",
       "Emory          XX      0.00\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('NNP', 1.0),\n",
+       " ('XX', 0.0),\n",
+       " ('VBZ', 0.9993718592964824),\n",
+       " ('DT', 0.9987005955603682),\n",
+       " ('JJ', 0.9585798816568047),\n",
+       " ('XX', 0.0),\n",
+       " ('NN', 1.0),\n",
+       " ('IN', 1.0),\n",
+       " ('XX', 0.0)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -498,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -547,11 +582,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Any\n",
     "PREV_DUMMY = '!@#$'\n",
+    "\n",
+    "def to_probs(model: Dict[Any, Counter]):\n",
+    "    for feature, counter in model.items():\n",
+    "        ts = counter.most_common()\n",
+    "        total = sum([count for _, count in ts])\n",
+    "        model[feature] = [(pos, count/total) for pos, count in ts]\n",
+    "    return model\n",
     "\n",
     "def create_bi_pos_dict(data: List[List[Tuple[str, str]]]) -> Dict[str, List[Tuple[str, float]]]:\n",
     "    \"\"\"\n",
@@ -560,7 +603,7 @@
     "    \"\"\"\n",
     "    model = dict()\n",
     "    # To be updated\n",
-    "    return model\n"
+    "    return model"
    ]
   },
   {
@@ -572,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -665,6 +708,309 @@
    ],
    "source": [
     "evaluate_bi_pos(uni_pos_dict, bi_pos_dict, dev_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interpolation\n",
+    "\n",
+    "Let us write the following functions:\n",
+    "\n",
+    "* `create_bi_wp_dict()` that estimates $P(p|w_{i-1})$.\n",
+    "* `create_bi_wn_dict()` that estimates $P(p|w_{i+1})$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_bi_wp_dict(data: List[List[Tuple[str, str]]]) -> Dict[str, List[Tuple[str, float]]]:\n",
+    "    \"\"\"\n",
+    "    :param data: a list of tuple lists where each inner list represents a sentence and every tuple is a (word, pos) pair.\n",
+    "    :return: a dictionary where the key is the previous word and the value is the list of possible POS tags with probabilities in descending order.\n",
+    "    \"\"\"\n",
+    "    model = dict()\n",
+    "\n",
+    "    for sentence in data:\n",
+    "        for i, (_, curr_pos) in enumerate(sentence):\n",
+    "            prev_word = sentence[i-1][0] if i > 0 else PREV_DUMMY\n",
+    "            model.setdefault(prev_word, Counter()).update([curr_pos])\n",
+    "\n",
+    "    return to_probs(model)\n",
+    "\n",
+    "\n",
+    "def create_bi_wn_dict(data: List[List[Tuple[str, str]]]) -> Dict[str, List[Tuple[str, float]]]:\n",
+    "    \"\"\"\n",
+    "    :param data: a list of tuple lists where each inner list represents a sentence and every tuple is a (word, pos) pair.\n",
+    "    :return: a dictionary where the key is the previous word and the value is the list of possible POS tags with probabilities in descending order.\n",
+    "    \"\"\"\n",
+    "    model = dict()\n",
+    "\n",
+    "    for sentence in data:\n",
+    "        for i, (_, curr_pos) in enumerate(sentence):\n",
+    "            next_word = sentence[i+1][0] if i+1 < len(sentence) else PREV_DUMMY\n",
+    "            model.setdefault(next_word, Counter()).update([curr_pos])\n",
+    "\n",
+    "    return to_probs(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create two binary dictionaries from the training data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bi_wp_dict = create_bi_wp_dict(trn_data)\n",
+    "bi_wn_dict = create_bi_wn_dict(trn_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_interporlation(\n",
+    "        uni_pos_dict: Dict[str, List[Tuple[str, float]]],\n",
+    "        bi_pos_dict: Dict[str, List[Tuple[str, float]]],\n",
+    "        bi_wp_dict: Dict[str, List[Tuple[str, float]]],\n",
+    "        bi_wn_dict: Dict[str, List[Tuple[str, float]]],\n",
+    "        uni_pos_weight: float,\n",
+    "        bi_pos_weight: float,\n",
+    "        bi_wp_weight: float,\n",
+    "        bi_wn_weight: float,\n",
+    "        tokens: List[str]) -> List[Tuple[str, float]]:\n",
+    "    output = []\n",
+    "\n",
+    "    for i in range(len(tokens)):\n",
+    "        scores = dict()\n",
+    "        curr_word = tokens[i]\n",
+    "        prev_pos = output[i-1][0] if i > 0 else PREV_DUMMY\n",
+    "        prev_word = tokens[i-1] if i > 0 else PREV_DUMMY\n",
+    "        next_word = tokens[i+1] if i+1 < len(tokens) else PREV_DUMMY\n",
+    "\n",
+    "        for pos, prob in uni_pos_dict.get(curr_word, dict()):\n",
+    "            scores[pos] = scores.get(pos, 0) + prob * uni_pos_weight\n",
+    "\n",
+    "        for pos, prob in bi_pos_dict.get(prev_pos, dict()):\n",
+    "            scores[pos] = scores.get(pos, 0) + prob * bi_pos_weight\n",
+    "\n",
+    "        for pos, prob in bi_wp_dict.get(prev_word, dict()):\n",
+    "            scores[pos] = scores.get(pos, 0) + prob * bi_wp_weight\n",
+    "\n",
+    "        for pos, prob in bi_wn_dict.get(next_word, dict()):\n",
+    "            scores[pos] = scores.get(pos, 0) + prob * bi_wn_weight\n",
+    "\n",
+    "        o = max(scores.items(), key=lambda t: t[1]) if scores else ('XX', 0.0)\n",
+    "        output.append(o)\n",
+    "\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_interpolation(\n",
+    "        uni_pos_dict: Dict[str, List[Tuple[str, float]]],\n",
+    "        bi_pos_dict: Dict[str, List[Tuple[str, float]]],\n",
+    "        bi_wp_dict: Dict[str, List[Tuple[str, float]]],\n",
+    "        bi_wn_dict: Dict[str, List[Tuple[str, float]]],\n",
+    "        uni_pos_weight: float,\n",
+    "        bi_pos_weight: float,\n",
+    "        bi_wp_weight: float,\n",
+    "        bi_wn_weight: float,\n",
+    "        data: List[List[Tuple[str, str]]],\n",
+    "        pprint=False):\n",
+    "    total, correct = 0, 0\n",
+    "    for sentence in data:\n",
+    "        tokens, gold = tuple(zip(*sentence))\n",
+    "        pred = [t[0] for t in predict_interporlation(uni_pos_dict, bi_pos_dict, bi_wp_dict, bi_wn_dict, uni_pos_weight, bi_pos_weight, bi_wp_weight, bi_wn_weight, tokens)]\n",
+    "        total += len(tokens)\n",
+    "        correct += len([1 for g, p in zip(gold, pred) if g == p])\n",
+    "        \n",
+    "    accuracy = 100.0 * correct / total\n",
+    "    print('{:5.2f}% - uni_pos: {:3.1f}, bi_pos: {:3.1f}, bi_wp: {:3.1f}, bi_np: {:3.1f}'.format(accuracy, uni_pos_weight, bi_pos_weight, bi_wp_weight, bi_wn_weight))\n",
+    "    return accuracy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91.25% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 1.0, bi_np: 1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "91.25129014631777"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uni_pos_weight = 1.0\n",
+    "bi_pos_weight = 1.0\n",
+    "bi_wp_weight = 1.0\n",
+    "bi_wn_weight = 1.0\n",
+    "evaluate_interpolation(uni_pos_dict, bi_pos_dict, bi_wp_dict, bi_wn_dict, uni_pos_weight, bi_pos_weight, bi_wp_weight, bi_wn_weight, dev_data, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91.25% - uni_pos: 0.1, bi_pos: 0.1, bi_wp: 0.1, bi_np: 0.1\n",
+      "67.53% - uni_pos: 0.1, bi_pos: 0.1, bi_wp: 0.1, bi_np: 0.5\n",
+      "53.88% - uni_pos: 0.1, bi_pos: 0.1, bi_wp: 0.1, bi_np: 1.0\n",
+      "67.32% - uni_pos: 0.1, bi_pos: 0.1, bi_wp: 0.5, bi_np: 0.1\n",
+      "65.99% - uni_pos: 0.1, bi_pos: 0.1, bi_wp: 0.5, bi_np: 0.5\n",
+      "58.57% - uni_pos: 0.1, bi_pos: 0.1, bi_wp: 0.5, bi_np: 1.0\n",
+      "54.19% - uni_pos: 0.1, bi_pos: 0.1, bi_wp: 1.0, bi_np: 0.1\n",
+      "59.34% - uni_pos: 0.1, bi_pos: 0.1, bi_wp: 1.0, bi_np: 0.5\n",
+      "58.84% - uni_pos: 0.1, bi_pos: 0.1, bi_wp: 1.0, bi_np: 1.0\n",
+      "53.94% - uni_pos: 0.1, bi_pos: 0.5, bi_wp: 0.1, bi_np: 0.1\n",
+      "62.74% - uni_pos: 0.1, bi_pos: 0.5, bi_wp: 0.1, bi_np: 0.5\n",
+      "55.54% - uni_pos: 0.1, bi_pos: 0.5, bi_wp: 0.1, bi_np: 1.0\n",
+      "53.08% - uni_pos: 0.1, bi_pos: 0.5, bi_wp: 0.5, bi_np: 0.1\n",
+      "61.05% - uni_pos: 0.1, bi_pos: 0.5, bi_wp: 0.5, bi_np: 0.5\n",
+      "58.78% - uni_pos: 0.1, bi_pos: 0.5, bi_wp: 0.5, bi_np: 1.0\n",
+      "47.89% - uni_pos: 0.1, bi_pos: 0.5, bi_wp: 1.0, bi_np: 0.1\n",
+      "56.09% - uni_pos: 0.1, bi_pos: 0.5, bi_wp: 1.0, bi_np: 0.5\n",
+      "58.17% - uni_pos: 0.1, bi_pos: 0.5, bi_wp: 1.0, bi_np: 1.0\n",
+      "20.11% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 0.1, bi_np: 0.1\n",
+      "45.69% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 0.1, bi_np: 0.5\n",
+      "53.83% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 0.1, bi_np: 1.0\n",
+      "36.86% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 0.5, bi_np: 0.1\n",
+      "50.34% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 0.5, bi_np: 0.5\n",
+      "55.80% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 0.5, bi_np: 1.0\n",
+      "41.53% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 1.0, bi_np: 0.1\n",
+      "50.60% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 1.0, bi_np: 0.5\n",
+      "55.44% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 1.0, bi_np: 1.0\n",
+      "92.97% - uni_pos: 0.5, bi_pos: 0.1, bi_wp: 0.1, bi_np: 0.1\n",
+      "92.68% - uni_pos: 0.5, bi_pos: 0.1, bi_wp: 0.1, bi_np: 0.5\n",
+      "87.10% - uni_pos: 0.5, bi_pos: 0.1, bi_wp: 0.1, bi_np: 1.0\n",
+      "92.85% - uni_pos: 0.5, bi_pos: 0.1, bi_wp: 0.5, bi_np: 0.1\n",
+      "92.75% - uni_pos: 0.5, bi_pos: 0.1, bi_wp: 0.5, bi_np: 0.5\n",
+      "87.81% - uni_pos: 0.5, bi_pos: 0.1, bi_wp: 0.5, bi_np: 1.0\n",
+      "87.91% - uni_pos: 0.5, bi_pos: 0.1, bi_wp: 1.0, bi_np: 0.1\n",
+      "88.03% - uni_pos: 0.5, bi_pos: 0.1, bi_wp: 1.0, bi_np: 0.5\n",
+      "84.47% - uni_pos: 0.5, bi_pos: 0.1, bi_wp: 1.0, bi_np: 1.0\n",
+      "93.10% - uni_pos: 0.5, bi_pos: 0.5, bi_wp: 0.1, bi_np: 0.1\n",
+      "92.87% - uni_pos: 0.5, bi_pos: 0.5, bi_wp: 0.1, bi_np: 0.5\n",
+      "87.29% - uni_pos: 0.5, bi_pos: 0.5, bi_wp: 0.1, bi_np: 1.0\n",
+      "91.55% - uni_pos: 0.5, bi_pos: 0.5, bi_wp: 0.5, bi_np: 0.1\n",
+      "91.25% - uni_pos: 0.5, bi_pos: 0.5, bi_wp: 0.5, bi_np: 0.5\n",
+      "86.44% - uni_pos: 0.5, bi_pos: 0.5, bi_wp: 0.5, bi_np: 1.0\n",
+      "84.72% - uni_pos: 0.5, bi_pos: 0.5, bi_wp: 1.0, bi_np: 0.1\n",
+      "85.44% - uni_pos: 0.5, bi_pos: 0.5, bi_wp: 1.0, bi_np: 0.5\n",
+      "82.41% - uni_pos: 0.5, bi_pos: 0.5, bi_wp: 1.0, bi_np: 1.0\n",
+      "91.14% - uni_pos: 0.5, bi_pos: 1.0, bi_wp: 0.1, bi_np: 0.1\n",
+      "90.42% - uni_pos: 0.5, bi_pos: 1.0, bi_wp: 0.1, bi_np: 0.5\n",
+      "85.11% - uni_pos: 0.5, bi_pos: 1.0, bi_wp: 0.1, bi_np: 1.0\n",
+      "87.04% - uni_pos: 0.5, bi_pos: 1.0, bi_wp: 0.5, bi_np: 0.1\n",
+      "87.23% - uni_pos: 0.5, bi_pos: 1.0, bi_wp: 0.5, bi_np: 0.5\n",
+      "83.16% - uni_pos: 0.5, bi_pos: 1.0, bi_wp: 0.5, bi_np: 1.0\n",
+      "79.06% - uni_pos: 0.5, bi_pos: 1.0, bi_wp: 1.0, bi_np: 0.1\n",
+      "80.58% - uni_pos: 0.5, bi_pos: 1.0, bi_wp: 1.0, bi_np: 0.5\n",
+      "78.92% - uni_pos: 0.5, bi_pos: 1.0, bi_wp: 1.0, bi_np: 1.0\n",
+      "92.73% - uni_pos: 1.0, bi_pos: 0.1, bi_wp: 0.1, bi_np: 0.1\n",
+      "92.86% - uni_pos: 1.0, bi_pos: 0.1, bi_wp: 0.1, bi_np: 0.5\n",
+      "92.28% - uni_pos: 1.0, bi_pos: 0.1, bi_wp: 0.1, bi_np: 1.0\n",
+      "93.05% - uni_pos: 1.0, bi_pos: 0.1, bi_wp: 0.5, bi_np: 0.1\n",
+      "93.46% - uni_pos: 1.0, bi_pos: 0.1, bi_wp: 0.5, bi_np: 0.5\n",
+      "93.01% - uni_pos: 1.0, bi_pos: 0.1, bi_wp: 0.5, bi_np: 1.0\n",
+      "92.81% - uni_pos: 1.0, bi_pos: 0.1, bi_wp: 1.0, bi_np: 0.1\n",
+      "93.13% - uni_pos: 1.0, bi_pos: 0.1, bi_wp: 1.0, bi_np: 0.5\n",
+      "92.80% - uni_pos: 1.0, bi_pos: 0.1, bi_wp: 1.0, bi_np: 1.0\n",
+      "92.82% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 0.1, bi_np: 0.1\n",
+      "93.24% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 0.1, bi_np: 0.5\n",
+      "92.74% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 0.1, bi_np: 1.0\n",
+      "93.17% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 0.5, bi_np: 0.1\n",
+      "93.51% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 0.5, bi_np: 0.5\n",
+      "93.12% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 0.5, bi_np: 1.0\n",
+      "92.39% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 1.0, bi_np: 0.1\n",
+      "92.82% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 1.0, bi_np: 0.5\n",
+      "92.34% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 1.0, bi_np: 1.0\n",
+      "92.96% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 0.1, bi_np: 0.1\n",
+      "93.30% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 0.1, bi_np: 0.5\n",
+      "92.81% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 0.1, bi_np: 1.0\n",
+      "93.03% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 0.5, bi_np: 0.1\n",
+      "93.28% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 0.5, bi_np: 0.5\n",
+      "92.73% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 0.5, bi_np: 1.0\n",
+      "91.37% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 1.0, bi_np: 0.1\n",
+      "91.83% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 1.0, bi_np: 0.5\n",
+      "91.25% - uni_pos: 1.0, bi_pos: 1.0, bi_wp: 1.0, bi_np: 1.0\n",
+      "==========================================================\n",
+      "Best : 93.51% - uni_pos: 1.0, bi_pos: 0.5, bi_wp: 0.5, bi_np: 0.5\n",
+      "Worst: 20.11% - uni_pos: 0.1, bi_pos: 1.0, bi_wp: 0.1, bi_np: 0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "grid = [0.1, 0.5, 1.0]\n",
+    "best = (0, None)\n",
+    "worst = (100, None)\n",
+    "\n",
+    "for uni_pos_weight in grid:\n",
+    "    for bi_pos_weight in grid:\n",
+    "        for bi_wp_weight in grid:\n",
+    "            for bi_wn_weight in grid:\n",
+    "                acc = evaluate_interpolation(uni_pos_dict, bi_pos_dict, bi_wp_dict, bi_wn_dict, uni_pos_weight, bi_pos_weight, bi_wp_weight, bi_wn_weight, dev_data)\n",
+    "                if acc > best[0]: best = (acc, uni_pos_weight, bi_pos_weight, bi_wp_weight, bi_wn_weight)\n",
+    "                if acc < worst[0]: worst = (acc, uni_pos_weight, bi_pos_weight, bi_wp_weight, bi_wn_weight)\n",
+    "\n",
+    "print('==========================================================')\n",
+    "print('Best : {:5.2f}% - uni_pos: {:3.1f}, bi_pos: {:3.1f}, bi_wp: {:3.1f}, bi_np: {:3.1f}'.format(*best))\n",
+    "print('Worst: {:5.2f}% - uni_pos: {:3.1f}, bi_pos: {:3.1f}, bi_wp: {:3.1f}, bi_np: {:3.1f}'.format(*worst))"
    ]
   },
   {
