--- a/doc/named_entity_recognition.ipynb
+++ b/doc/named_entity_recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "numeric-original",
+   "id": "optical-temperature",
    "metadata": {},
    "source": [
     "# Named Entity Recognition\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "played-lending",
+   "id": "pretty-memphis",
    "metadata": {},
    "source": [
     "## Named Entity Tags\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "associate-findings",
+   "id": "featured-royalty",
    "metadata": {},
    "source": [
     "## Token-level Recognition\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incorrect-underground",
+   "id": "correct-rugby",
    "metadata": {},
    "source": [
     "## BIO Notation\n",
@@ -151,7 +151,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wound-yorkshire",
+   "id": "accepting-bundle",
+   "metadata": {},
+   "source": [
+    "### Examples\n",
+    "\n",
+    "```\n",
+    "Emory       ORG\n",
+    "University  ORG\n",
+    "Whitehall   LOC | PER\n",
+    "\n",
+    "Emory       B-ORG\n",
+    "University  I-ORG\n",
+    "Whitehall   B-LOC | B-PER\n",
+    "\n",
+    "I           O\n",
+    "went        O\n",
+    "to          O\n",
+    "Emory       B-ORG\n",
+    "University  I-ORG\n",
+    "and         O\n",
+    "University  B-ORG\n",
+    "of          I-ORG\n",
+    "Georgia     I-ORG\n",
+    "\n",
+    "I           O\n",
+    "went        O\n",
+    "to          O\n",
+    "Emory       ORG\n",
+    "University  ORG\n",
+    "University  ORG\n",
+    "of          ORG\n",
+    "Georgia     ORG\n",
+    "\n",
+    "I           O\n",
+    "went        O\n",
+    "to          O\n",
+    "Emory       B-ORG\n",
+    "University  I-ORG\n",
+    "University  B-ORG\n",
+    "of          I-ORG\n",
+    "Georgia     I-ORG\n",
+    "\n",
+    "I           O\n",
+    "went        O\n",
+    "to          O\n",
+    "Emory       B-ORG\n",
+    "University  I-ORG | B-ORG\n",
+    "of          I-ORG\n",
+    "Georgia     I-ORG\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "finnish-georgia",
    "metadata": {},
    "source": [
     "## BILOU Notation\n",
@@ -182,7 +236,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "junior-cleaning",
+   "id": "complicated-pledge",
+   "metadata": {},
+   "source": [
+    "### Examples\n",
+    "\n",
+    "```\n",
+    "United        B-GPE\n",
+    "States        L-GPE\n",
+    "of            I-GPE\n",
+    "America       L-GPE\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "infinite-congress",
    "metadata": {},
    "source": [
     "## NER with Gazetteer\n",
@@ -202,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "unique-barrel",
+   "id": "simple-mississippi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "quality-essex",
+   "id": "nonprofit-lounge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "individual-philip",
+   "id": "joint-stranger",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varied-victim",
+   "id": "alike-northern",
    "metadata": {},
    "outputs": [],
    "source": []
