--- a/doc/named_entity_recognition.ipynb
+++ b/doc/named_entity_recognition.ipynb
@@ -19,7 +19,8 @@
     "* [Token-level Recognition](#Token-level-Recognition)\n",
     "* [BIO Notation](#BIO-Notation)\n",
     "* [BILOU Notation](#BILOU-Notation)\n",
-    "* [NER with Gazetteer](#NER-with-Gazetteer)"
+    "* [NER with Gazetteer](#NER-with-Gazetteer)\n",
+    "* [NER using Prefix Tree](#NER-using-Prefix-Tree)"
    ]
   },
   {
@@ -337,12 +338,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "smart-honduras",
+   "metadata": {},
+   "source": [
+    "## NER using Prefix Tree\n",
+    "\n",
+    "The `recgonize_ngram()` function requires $O(n^2)$ search that can be very slow.\n",
+    "In this case, using a more advanced data structure such as [Trie](https://en.wikipedia.org/wiki/Trie) (aka. prefix tree) can significantly reduce the search complexity.\n",
+    "In the following example, we will use the [Aho–Corasick Algorithm](https://en.wikipedia.org/wiki/Aho%E2%80%93Corasick_algorithm) that is based on Trie but more efficient in saving millions of entries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compressed-thursday",
+   "metadata": {},
+   "source": [
+    "Let us define a new gazetteer:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "alike-northern",
+   "execution_count": 15,
+   "id": "flush-saying",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "GAZETTEER = [\n",
+    "    ('Jinho', 'PER'),\n",
+    "    ('Jinho Choi', 'PER'),\n",
+    "    ('Emory', 'PER'),\n",
+    "    ('Emory', 'ORG'),\n",
+    "    ('Emory University', 'ORG'),\n",
+    "    ('United States', 'GPE'),\n",
+    "    ('United States of America', 'GPE'),\n",
+    "    ('Korean', 'LANG'),\n",
+    "    ('Korea', 'GPE'),\n",
+    "    ('South Korea', 'GPE'),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "entertaining-prompt",
+   "metadata": {},
+   "source": [
+    "Let us import the `ahocorasick` package:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "honey-housing",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyahocorasick\n",
+      "  Using cached pyahocorasick-1.4.1.tar.gz (321 kB)\n",
+      "Using legacy 'setup.py install' for pyahocorasick, since package 'wheel' is not installed.\n",
+      "Installing collected packages: pyahocorasick\n",
+      "    Running setup.py install for pyahocorasick ... \u001b[?25ldone\n",
+      "\u001b[?25hSuccessfully installed pyahocorasick-1.4.1\n",
+      "\u001b[33mWARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
+      "You should consider upgrading via the '/Users/jdchoi/workspace/cs329/venv/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pyahocorasick\n",
+    "import ahocorasick"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "israeli-federal",
+   "metadata": {},
+   "source": [
+    "* [`pyahocorasick`](https://pyahocorasick.readthedocs.io)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "incredible-brazil",
+   "metadata": {},
+   "source": [
+    "We then write the `create_ac()` function to create the Aho-Corasick automation and add all entries in the gazetteer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "capable-brain",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Iterable, Tuple, Any\n",
+    "from types import SimpleNamespace\n",
+    "\n",
+    "def create_ac(data: Iterable[Tuple[str, Any]]):\n",
+    "    \"\"\"\n",
+    "    Creates the Aho-Corasick automation and adds all (span, value) pairs in the data and finalizes this matcher.\n",
+    "    :param data: a collection of (span, value) pairs.\n",
+    "    \"\"\"\n",
+    "    AC = ahocorasick.Automaton(ahocorasick.STORE_ANY)\n",
+    "\n",
+    "    for span, value in data:\n",
+    "        if span in AC:\n",
+    "            t = AC.get(span)\n",
+    "        else:\n",
+    "            t = SimpleNamespace(span=span, values=set())\n",
+    "            AC.add_word(span, t)\n",
+    "        t.values.add(value)\n",
+    "\n",
+    "    AC.make_automaton()\n",
+    "    return AC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "assisted-softball",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AC = create_ac(GAZETTEER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "hybrid-garage",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 namespace(span='Korea', values={'GPE'})\n",
+      "19 namespace(span='Korean', values={'LANG'})\n",
+      "47 namespace(span='United States', values={'GPE'})\n",
+      "58 namespace(span='United States of America', values={'GPE'})\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = 'Dr. Choi is a Korean living in the United States of America '\n",
+    "tokens = text.split()\n",
+    "\n",
+    "for eidx, t in AC.iter(text):\n",
+    "    print(eidx, t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "turned-valley",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Write a function `match"
+   ]
   }
  ],
  "metadata": {
