--- a/doc/named_entity_recognition.ipynb
+++ b/doc/named_entity_recognition.ipynb
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smart-honduras",
+   "id": "qualified-comment",
    "metadata": {},
    "source": [
     "## NER using Prefix Tree\n",
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compressed-thursday",
+   "id": "perfect-decline",
    "metadata": {},
    "source": [
     "Let us define a new gazetteer:"
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "flush-saying",
+   "id": "surprising-bundle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entertaining-prompt",
+   "id": "proof-sacramento",
    "metadata": {},
    "source": [
     "Let us import the `ahocorasick` package:"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "honey-housing",
+   "id": "hollow-simpson",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "israeli-federal",
+   "id": "freelance-kazakhstan",
    "metadata": {},
    "source": [
     "* [`pyahocorasick`](https://pyahocorasick.readthedocs.io)"
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incredible-brazil",
+   "id": "mounted-williams",
    "metadata": {},
    "source": [
     "We then write the `create_ac()` function to create the Aho-Corasick automation and add all entries in the gazetteer:"
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "capable-brain",
+   "id": "political-progress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,8 +459,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "numerous-computer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'A': 0, 'B': 1, 'C': 2}\n",
+    "b = SimpleNamespace(A=0, B=1, C=2)\n",
+    "\n",
+    "print(a['A'])\n",
+    "print(b.A)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
-   "id": "assisted-softball",
+   "id": "decent-scroll",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "hybrid-garage",
+   "id": "pregnant-banner",
    "metadata": {},
    "outputs": [
     {
@@ -494,13 +517,64 @@
   },
   {
    "cell_type": "markdown",
-   "id": "turned-valley",
+   "id": "intellectual-advertising",
    "metadata": {},
    "source": [
     "### Exercise\n",
     "\n",
-    "Write a function `match"
+    "Write a function `match()` that returns a list of entities where each entity spans over only token boundaries:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "forbidden-factory",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Set\n",
+    "\n",
+    "def match(AC, tokens: List[str]) -> List[Tuple[str, int, int, Set[str]]]:\n",
+    "    \"\"\"\n",
+    "    :param AC: the finalized Aho-Corasick automation.\n",
+    "    :param tokens: the list of input tokens.\n",
+    "    :return: a list of tuples where each tuple consists of\n",
+    "             - span: str,\n",
+    "             - start token index (inclusive): int\n",
+    "             - end token index (exclusive): int\n",
+    "             - a set of values for the span: Set[Any]\n",
+    "    \"\"\"\n",
+    "    # TODO: to be updated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "sunrise-print",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Korean', 4, 5, {'LANG'})\n",
+      "('United States', 8, 10, {'GPE'})\n",
+      "('United States of America', 8, 12, {'GPE'})\n"
+     ]
+    }
+   ],
+   "source": [
+    "for span in match(AC, tokens):\n",
+    "    print(span)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bronze-delay",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
